--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-i18n": "^11.1.3",
     "vue-router": "^4.5.1",
     "vue-sonner": "^1.3.2",
+    "wrangler": "^4.14.4",
     "zod": "^3.24.4"
   },
   "devDependencies": {
