--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vue-tsc -b && vite build",
     "build-skip-ts-check": "vite build",
     "type-check": "vue-tsc -b",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && wrangler deploy ./worker.ts"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
@@ -19,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-vue": "^8.6.0",
+    "itty-router": "^5.0.18",
     "lucide": "^0.507.0",
     "lucide-vue-next": "^0.508.0",
     "pinia": "^3.0.2",
@@ -33,16 +35,19 @@
     "vue-i18n": "^11.1.3",
     "vue-router": "^4.5.1",
     "vue-sonner": "^1.3.2",
-    "wrangler": "^4.14.4",
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.1.1",
+    "@cloudflare/workers-types": "^4.20250508.0",
     "@types/node": "^22.15.17",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
+    "vite-plugin-cloudflare-workers": "^0.0.0-alpha.0",
     "vite-plugin-vue-devtools": "^7.7.6",
-    "vue-tsc": "^2.2.8"
+    "vue-tsc": "^2.2.8",
+    "wrangler": "^4.14.4"
   }
 }
