Add Cloudflare-related dependencies, enable observability logs in wrangler configuration, and update package-lock.json

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,3 +3,6 @@ type = "javascript"
 account_id = "dfd0934ada854fb30ecb91fe050f5294"
 workers_dev = true
 compatibility_date = "2025-05-09"
+
+[observability.logs]
+enabled = true
