Update TypeScript configuration, enhance Vite setup, and improve project components. Key changes include enabling library checks, modifying error handling in components, and refining project image URLs. Added a new search route and improved data handling in various views.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,10 +7,10 @@
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "erasableSyntaxOnly": false,
     "noImplicitAny": false,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+    "skipLibCheck": true,
     "baseUrl": ".",
     "lib": ["ES2023", "DOM"],
     "paths": {
