--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "build-skip-ts-check": "vite build",
+    "build": "vite build",
     "type-check": "vue-tsc -b",
     "preview": "vite preview",
     "deploy": "npm run build && wrangler deploy ./worker.ts",
@@ -24,6 +23,7 @@
     "@vueuse/head": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "embla-carousel-vue": "^8.6.0",
     "itty-router": "^5.0.18",
     "lucide": "^0.507.0",
